# couchdb

./: .gitignore  CHANGES  CMakeLists.txt  INSTALL.Unix  INSTALL.Windows  LICENSE  Makefile  Makefile.am  NEWS  NOTICE  README  README.geo  README.md  SYNCPOINT  acinclude.m4.in  bootstrap  configure.ac  gen_load.sh  license.skip  rebar.config  snappy-couch-tests.txt
etc/couchdb/: CMakeLists.txt  Makefile.am  default.ini.in  default.ini.tpl.in  default_dev.ini  default_dev.ini.in  local.ini  local_dev.ini
share/www/: CMakeLists.txt  _sidebar.html  config.html  couch_tests.html  custom_test.html  database.html  document.html  futon.js  index.html  replicator.html  session.html  status.html
share/www/sammy/: app.js
share/www/script/: couch.js  couch_test_runner.js  couch_tests.js  futon-dialogs.js  futon.browse.js  futon.js  jquery.couch.js  jquery.dialog.js  jquery.form.js  old-futon.js
share/www/style/: layout.css  sammy.css
share/www/templates/: changes.mustache  config.mustache  database.mustache  document.mustache  index.mustache  replicator.mustache  stats.mustache  tests.mustache  view.mustache
src/: CMakeLists.txt  Makefile.am
src/couch_audit/: CMakeLists.txt
src/couch_audit/etc/: audit_descriptor.json
src/couch_audit/src/: couch_audit.app.src  couch_audit.erl  couch_audit_app.erl  couch_audit_sup.erl  memcached_calls.erl
src/couch_dcp/: CMakeLists.txt
src/couch_dcp/include/: couch_dcp.hrl  couch_dcp_typespecs.hrl
src/couch_dcp/src/: couch_dcp.app.src  couch_dcp_client.erl  couch_dcp_consumer.erl  couch_dcp_fake_server.erl  couch_dcp_producer.erl
src/couch_dcp/test/: 00-prepare.t  01-load.t  04-view-groups.t  05-couch-dcp-client.t  06-rollback.t  CMakeLists.txt  run.tpl
src/couch_index_merger/: CMakeLists.txt  Makefile.am
src/couch_index_merger/include/: couch_index_merger.hrl  couch_view_merger.hrl
src/couch_index_merger/src/: couch_http_view_streamer.erl  couch_httpd_view_merger.erl  couch_index_app.erl  couch_index_merger.app.src  couch_index_merger.erl  couch_index_merger_validation.erl  couch_index_sup.erl  couch_query_logger.erl  couch_skew.erl  couch_view_merger.erl  couch_view_merger_queue.erl
src/couch_set_view/: CMakeLists.txt  Makefile.am
src/couch_set_view/include/: couch_set_view.hrl
src/couch_set_view/src/: couch_db_set.erl  couch_index_barrier.erl  couch_set_view.app.src  couch_set_view.erl  couch_set_view_compactor.erl  couch_set_view_ddoc_cache.erl  couch_set_view_dev.erl  couch_set_view_group.erl  couch_set_view_http.erl  couch_set_view_mapreduce.erl  couch_set_view_update_daemon.erl  couch_set_view_updater.erl  couch_set_view_updater.hrl  couch_set_view_updater_helper.erl  couch_set_view_util.erl  mapreduce_view.erl
src/couch_set_view/test/: 00-prepare.t  01-collation.t  01-headers.t  01-load.t  02-old-index-cleanup.t  03-db-compaction-file-leaks.t  04-group-shutdown.t  04-handle-db-deletes.t  05-replicas-transfer.t  06-main-compaction.t  06-replica-compaction.t  07-replica-compaction.t  08-deletes-cleanup.t  09-deletes-cleanup-many-views.t  09-errors.t  09-updates-cleanup.t  10-updates-cleanup.t  11-updates-cleanup-many-views.t  12-errors.t  13-progressive-cleanup.t  14-duplicated-keys-per-doc.t  15-passive-partitions.t  16-pending-transition.t  17-unindexable-partitions.t  18-monitor-partition-updates.t  19-compaction-retry.t  20-debug-params.t  21-updater-cleanup.t  22-compactor-cleanup.t  23-replica-group-missing.t  24-updater-add-more-passive-partitions.t  25-util-stats.t  26-multiple-reductions.t  27-database-purges.t  27-dev-views.t  28-big-reduce.t  29-rollback.t  30-query-fdleaks.t  31-ryow-query.t  32-upgrade.t  (+8 more)
src/couch_upr/: CMakeLists.txt  Makefile.am
src/couch_upr/ebin/: couch_upr.app
src/couch_upr/include/: couch_upr.hrl  couch_upr_typespecs.hrl
src/couch_upr/src/: cb_auth_info.erl  couch_upr.app.src  couch_upr.erl  couch_upr_client.erl  couch_upr_consumer.erl  couch_upr_fake_server.erl  couch_upr_producer.erl
src/couch_view_parser/: CMakeLists.txt  Makefile.am  couch_view_parser.app.in  couch_view_parser.cc  couch_view_parser.erl  couch_view_parser.h  couch_view_parser_nif.cc  erl_nif_compat.h  taskqueue.h
src/couchdb/: CMakeLists.txt  Makefile.am  couch.app.tpl.in  couch_access_log.erl  couch_api_wrap.erl  couch_api_wrap.hrl  couch_api_wrap_httpc.erl  couch_app.erl  couch_app_server.erl  couch_app_server_emonk.erl  couch_app_server_erlang.erl  couch_app_server_objc.erl  couch_app_server_os.erl  couch_auth_cache.erl  couch_btree.erl  couch_btree_copy.erl  couch_btree_nif.erl  couch_btree_stats.erl  couch_changes.erl  couch_compaction_daemon.erl  couch_compress.erl  couch_compress_types.erl  couch_config.erl  couch_config_writer.erl  couch_db.erl  couch_db.hrl  couch_db_consistency_check.erl  couch_db_frontend.erl  couch_db_set.erl  couch_db_update_notifier.erl  couch_db_updater.erl  couch_doc.erl  couch_drv.erl  couch_ejson_compare.erl  couch_event_sup.erl  couch_file.erl  couch_file_write_guard.erl  couch_file_writer.erl  couch_httpd.erl  couch_httpd_auth.erl  (+65 more)
src/ejson/: CMakeLists.txt  Makefile.am  decode.c  ejson.c  ejson.erl
src/emonk/: Makefile.am
src/erlang-oauth/: CMakeLists.txt  oauth_hmac_sha1.erl
src/etap/: CMakeLists.txt  Makefile.am  etap.erl
src/geocouch/: geocouch_duplicates.erl
src/lhttpc/: CMakeLists.txt  Makefile.am  lhttpc.app.src  lhttpc.erl  lhttpc.hrl  lhttpc_client.erl  lhttpc_lib.erl  lhttpc_manager.erl  lhttpc_sock.erl  lhttpc_sup.erl  lhttpc_types.hrl
src/mapreduce/: CMakeLists.txt  Makefile.am  mapreduce.app.in  mapreduce.cc  mapreduce.erl  mapreduce.h  mapreduce_nif.cc  nif_stl_allocator.h
src/mochiweb/: CMakeLists.txt  Makefile.am  mochinum.erl  mochiweb.erl  mochiweb_acceptor.erl  mochiweb_http.erl  mochiweb_multipart.erl  mochiweb_request.erl  mochiweb_session.erl  mochiweb_socket.erl  mochiweb_socket_server.erl  mochiweb_util.erl  mochiweb_websocket.erl
src/snappy/: CMakeLists.txt  Makefile.am  erl_nif_compat.h  snappy.app.in  snappy.cc  snappy.erl  snappy_nif.cc
src/vtree/: Makefile  Makefile.am  vtree.erl  vtree_insbench.erl  vtree_test.erl
(+290 files in other folders)
