ADD_SUBDIRECTORY(couchdb)
ADD_SUBDIRECTORY(lhttpc)
ADD_SUBDIRECTORY(couch_set_view)
ADD_SUBDIRECTORY(couch_index_merger)
ADD_SUBDIRECTORY(couch_view_parser)
ADD_SUBDIRECTORY(couch_dcp)
ADD_SUBDIRECTORY(mapreduce)
ADD_SUBDIRECTORY(snappy)
ADD_SUBDIRECTORY(erlang-oauth)
ADD_SUBDIRECTORY(ejson)
ADD_SUBDIRECTORY(mochiweb)
ADD_SUBDIRECTORY(etap)
