FILE(GLOB SOURCES src/*.erl)
FILE(GLOB HEADERS include/*.hrl)

ADD_ERLANG_INCLUDE_DIR(${CMAKE_CURRENT_SOURCE_DIR}/../couchdb)
ADD_ERLANG_INCLUDE_DIR(${CMAKE_CURRENT_SOURCE_DIR}/..)

ERL_BUILD_OTP (APPNAME "couch_set_view" VERSION 1.0.0
  INSTALL_PATH ${CMAKE_ERL_LIB_INSTALL_PREFIX}
  HEADERS ${HEADERS} SOURCES ${SOURCES})

ADD_SUBDIRECTORY(test)
